# Ledger-Lever

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml  installer.iss  launcher.py  ledger_lever.spec  sample_transactions.csv
.github/workflows/: docker-push.yml  windows-release.yml
backend/: Dockerfile  requirements.txt
backend/app/: crud.py  database.py  main.py  models.py  scheduler.py  schemas.py  yfinance_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: portfolio.ts
frontend/src/components/: AddPositionModal.tsx  AllocationChart.tsx  Header.tsx  HoldingsTable.tsx  MonteCarloSimulator.tsx  PerformanceChart.tsx  SummaryCards.tsx
frontend/src/pages/: DocumentsPage.tsx  HoldingsPage.tsx  OverviewPage.tsx  PerformancePage.tsx  PlaceholderPage.tsx  RiskPage.tsx  TransactionsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: factors.ts  montecarlo.ts  stats.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  crud.rs  db.rs  fifo.rs  lib.rs  main.rs  models.rs  scheduler.rs  yahoo.rs
