[package]
name = "ledger-lever"
version = "1.0.0"
description = "Ledger Lever — Personal Portfolio Tracker"
authors = []
edition = "2021"

[lib]
name = "ledger_lever_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ledger-lever"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "cookies", "json"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
